objects/vlocity_ins__AccountAppliedPromotionItem__c.object
<CustomObject>
    <description>An Applied Promotion affects one or more customer assets. This object is the intersection between an Applied Promotion and an Asset that is affected by that Applied Promotion.</description>
    <fields>
        <fullName>vlocity_ins__AppliedAction__c</fullName>
        <label>Applied Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Apply</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AppliedPromotionId__c</fullName>
        <label>Applied Promotion</label>
        <referenceTo>vlocity_ins__AccountAppliedPromotion__c</referenceTo>
        <relationshipLabel>Applied Promotion Affected Assets</relationshipLabel>
        <relationshipName>AccountAppliedPromotionItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Applied Promotion Affected Assets</relationshipLabel>
        <relationshipName>AccountAppliedPromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetReferenceId__c</fullName>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaximumChildItemQuantity__c</fullName>
        <label>Max Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinimumChildItemQuantity__c</fullName>
        <label>Min Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Applied Promotion Affected Asset</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Promotion Affected Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>